objects/vlocity_cmt__PartyMergeRequest__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__IsInBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is In Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MasterId__c</fullName>
        <label>Master Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NonMasterId__c</fullName>
        <label>Non Master Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessStatus__c</fullName>
        <label>Process Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Party Merge Request</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__MasterId__c</columns>
        <columns>vlocity_cmt__NonMasterId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Master Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Party Merge Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>